<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_16dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/buscar_nota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@android:drawable/ic_menu_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvFilterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtrar"
        android:textStyle="bold"
        android:textSize="@dimen/margin_16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilSearch"/>

    <Spinner
        android:id="@+id/spFilterCategory"
        android:layout_width="@dimen/width_zero"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/height_48dp"
        android:layout_marginStart="@dimen/margin_16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvFilterLabel"
        app:layout_constraintTop_toTopOf="@+id/tvFilterLabel"
        app:layout_constraintStart_toEndOf="@+id/tvFilterLabel"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNotes"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_zero"
        android:layout_marginTop="@dimen/margin_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFilterLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_note" />

    <TextView
        android:id="@+id/tvLabelCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nueva_categoria"
        android:background="@android:color/white"
        android:elevation="@dimen/elevation_6dp"
        android:padding="@dimen/padding_4dp"
        android:visibility="gone"
        android:layout_marginEnd="@dimen/marginEnd_8dp"
        app:layout_constraintEnd_toStartOf="@+id/fabAddCategory"
        app:layout_constraintTop_toTopOf="@+id/fabAddCategory"
        app:layout_constraintBottom_toBottomOf="@+id/fabAddCategory"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:src="@android:drawable/ic_menu_sort_by_size"
        app:fabSize="mini"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/fabAddNote"
        app:layout_constraintEnd_toEndOf="@+id/fabMain"
        app:layout_constraintStart_toStartOf="@+id/fabMain" />

    <TextView
        android:id="@+id/tvLabelNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nueva_nota"
        android:background="@android:color/white"
        android:elevation="@dimen/elevation_6dp"
        android:padding="@dimen/padding_4dp"
        android:visibility="gone"
        android:layout_marginEnd="@dimen/marginEnd_8dp"
        app:layout_constraintEnd_toStartOf="@+id/fabAddNote"
        app:layout_constraintTop_toTopOf="@+id/fabAddNote"
        app:layout_constraintBottom_toBottomOf="@+id/fabAddNote"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_Top_24dp"
        android:src="@android:drawable/ic_menu_edit"
        app:fabSize="mini"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/fabMain"
        app:layout_constraintEnd_toEndOf="@+id/fabMain"
        app:layout_constraintStart_toStartOf="@+id/fabMain" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

